# data-science-agent

./: CLAUDE.md  CONTEXT.md  ds_agent.toml  ds_agent_concept.md  pyproject.toml
docs/adr/: 0001-fixed-tool-calling-for-v1.md  0002-aggregates-only-tool-outputs.md
docs/agents/: domain.md
docs/issues/: 0001-foundation-ingest-schema-report-skeleton.md  0002-uncertainty-mechanism-ambiguous-type-tiny-dataset.md  0003-missing-value-analysis-threshold-config.md  0004-distribution-analysis-chart-output.md  0005-outlier-detection.md  0006-correlation-analysis.md  0007-feature-engineering-suggestions.md  0008-optional-schema-metadata-file-input.md  0009-multi-csv-join-key-inference.md  0010-executive-summary-synthesis.md
docs/prd/: v1-eda-and-report.md  v2-supervised-ml.md
src/ds_agent/: cli.py  config.py  trace.py  uncertainty.py
tests/: conftest.py
tests/fixtures/: ambiguous_id.csv  correlated_data.csv  feature_suggestion_data.csv  join_ambiguous_a.csv  join_ambiguous_b.csv  join_left.csv  join_no_match_a.csv  join_no_match_b.csv  join_right.csv  missing_data.csv  outlier_data.csv  schema_hint_agree.json  schema_hint_conflict.json  simple.csv  tiny_dataset.csv
tests/integration/: test_correlation_pipeline.py  test_distribution_pipeline.py  test_executive_summary_pipeline.py  test_feature_suggestion_pipeline.py  test_join_pipeline.py  test_missing_value_pipeline.py  test_outlier_pipeline.py  test_pipeline.py  test_schema_file_pipeline.py  test_uncertainty_pipeline.py
tests/tools/: test_config.py  test_correlation.py  test_distribution.py  test_feature_suggestion.py  (+5 more)
(+17 files in other folders)
