[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.40",
    "pandas>=2.0",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1.0",
    "groq>=0.9",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ds-agent = "ds_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
